--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/style.css">
+    <script src="assets/script.js"></script>
     <title>Prework Study Guide</title>
   </head>
 
@@ -50,6 +51,8 @@
         <h2>Javascript</h2>
         <ul>
           <li> Enter your Javascrpt notes here</li>
+          <li>A variable is a name container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
         </ul>
       </section>
     </main>
